# Tensor_compiler

./: .gitignore  Attribute_8h.html  Attribute_8h__dep__incl.map  Attribute_8h__dep__incl.md5  Attribute_8h__incl.map  Attribute_8h__incl.md5  Attribute_8h_source.html  CMakeLists.txt  Codegen_8h.html  Codegen_8h__incl.map  Codegen_8h__incl.md5  Codegen_8h_source.html  Doxyfile  Driver_8h.html  Driver_8h_source.html  DumpPathGen_8h.html  DumpPathGen_8h__incl.map  DumpPathGen_8h__incl.md5  DumpPathGen_8h_source.html  Graph_8h.html  Graph_8h__dep__incl.map  Graph_8h__dep__incl.md5  Graph_8h__incl.map  Graph_8h__incl.md5  Graph_8h_source.html  GraphvizDumper_8h.html  GraphvizDumper_8h__incl.map  GraphvizDumper_8h__incl.md5  GraphvizDumper_8h_source.html  Handlers_8h.html  Handlers_8h__incl.map  Handlers_8h__incl.md5  Handlers_8h_source.html  LICENSE  LLVMToASMLowering_8h.html  LLVMToASMLowering_8h__incl.map  LLVMToASMLowering_8h__incl.md5  LLVMToASMLowering_8h_source.html  LLVMToASM_8h.html  LLVMToASM_8h__incl.map  (+498 more)
.github/workflows/: ci.yml
Driver/: RunResnet.py
Driver/mnist-12/: RunMnist.py
Driver/resnet50/: RunResnet.py
dump/: dump.gv
include/: Driver.h  Handlers.h  Utils.h  attribute.hpp  driver.h  driver.hpp  executor.h  executor.hpp  graph.hpp  graphviz_dumper.hpp  handlers.h  handlers.hpp  node.hpp  tensor.hpp  utils.h  utils.hpp
include/Codegen/: Codegen.h
include/GraphDump/: GraphvizDumper.h
include/Lowering/: LLVMToASM.h  LLVMToLLVMIR.h  MLIRToLLVM.h
include/ModelAPI/: ModelAPI.h
include/Structure/: Node.h
include/codegen/: Codegen.h  codegen.h  codegen.hpp
include/graph_dump/: DumpPathGen.h  GraphvizDumper.h  dump_path_gen.h  graphviz_dumper.h
include/lowering/: LLVMToASMLowering.h  MLIRToLLVMLowering.h  lowering_driver.h  mlirtollvmlowering.h
include/structure/: Attribute.h  Graph.h  Node.h  Tensor.h  attribute.h  attribute.hpp  graph.h  graph.hpp  node.h  node.hpp  tensor.h  tensor.hpp
lib/: Driver.cpp  driver.cpp  main.cpp
lib/Codegen/: Codegen.cpp
lib/Lowering/: LLVMToASM.cpp  LLVMToLLVMIR.cpp  MLIRToLLVM.cpp
lib/Runtime/: MemRefCopy.c  ModelRunner.c
lib/Structure/: Graph.cpp  Node.cpp  Tensor.cpp
lib/codegen/: Codegen.cpp  codegen.cpp
lib/lowering/: LLVMToASMLowering.cpp  MLIRToLLVMLowering.cpp  lowering_driver.cpp  mlirtollvmlowering.cpp
lib/structure/: Graph.cpp  Node.cpp  Tensor.cpp  graph.cpp  node.cpp  tensor.cpp
mlir_examples/: test_lowering.mlir
onnx_examples/: mul_add_const_graph.onnx  not_topological_graph.onnx  two_input_mul.onnx
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  (+21 more)
src/: driver.cpp  main.cpp
src/codegen/: codegen.cpp
tensorDriver/include/: TensorDrvAPI.h
tensorDriver/lib/: TensorDrvAPI.h  TensorDrvImpl.cpp
tests/unit/: CMakeLists.txt
tests/unit/Structure/: CMakeLists.txt
tests/unit/Structure/src/: attributes.cpp
tests/unit/structure/: CMakeLists.txt
tests/unit/structure/src/: attributes.cpp  graph.cpp  node.cpp  tensor.cpp
tools/: inference-app.cpp  mnist-runner.c  tensor-compiler.cpp
